--- a/site/guide/templates/manage-model-documents.qmd
+++ b/site/guide/templates/manage-model-documents.qmd
@@ -43,7 +43,7 @@ These stock documents cannot be deleted, only edited.
 
 #### Upload PDF documents
 
-Convert a Portable Document Format `.pdf` file (PDF) into an editable document in the {{< var validmind.platform >}}, allowing you to seamlessly work with existing PDFs as you would with any other template-based document, such as adding content blocks and attaching test results.
+Convert a Portable Document Format `.pdf` file (PDF) into a new editable document in the {{< var validmind.platform >}}, allowing you to seamlessly work with existing PDFs as you would with any other template-based document, such as adding content blocks and attaching test results.
 
 {{< var vm.product >}} automatically extracts the structure and content from your PDF, generates a document template that maps to the extracted sections, and populates each section in the template with the contents from your original document.
 
@@ -59,37 +59,37 @@ To upload a PDF and convert it into an editable model document:
 
 1. In the left sidebar, click **{{< fa cubes >}} Inventory**.
 
-2. Select a model or find your model by applying a filter or searching for it.
+2. Select a model or find your model by applying a filter or searching for it.^
 
-3. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select the **Latest** tab.
+3. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select the **Latest** tab.^
 
-4. Click on the document you want to add content to.
+4. Click on the document you want to upload a PDF to,^ or create a new document.^
 
-5. Under [start your document]{.smallcaps}, select **Upload a file**.
+5. Under [create document]{.smallcaps}, select **From PDF Upload**.
 
-6. Drag and drop a `.pdf` file into the upload area, or click **choose a file** to browse for it.
+6. Drag and drop a `.pdf` file into the upload area, or click **choose a file** to select from your file explorer.^
 
 ::: {.callout title="Only a single PDF file can be uploaded at a time."}
 If you need to upload a different PDF, click **Remove** to clear the current file before selecting a new one.
 :::
 
-7. Click **Upload and Convert** to begin the conversion.
+7. Click **Upload & Convert to Editable Document**.
 
-    A progress banner appears at the top of the document page indicating that conversion is in progress.
+    Track conversion progress in the banner that appears at the top of the document page.
 
-8. When the conversion completes, the page automatically refreshes to display your document as an editable template with the content extracted from the PDF.
+When conversion completes, the page automatically refreshes to display your document as an editable template with the content extracted from the PDF.
 
 ##### Cancel PDF conversion
 
 If you need to stop an in-progress conversion:
 
-1. While the conversion progress banner is displayed, click **Cancel**.
+1. In the conversion progress banner that appears at the top of the document page, click **Cancel**.
 
-2. In the confirmation dialog, optionally enable the **Delete file from this document** toggle to also remove the uploaded PDF file.
+2. On the Cancel File Conversion modal, optionally toggle **Delete file from this document** on to also remove the uploaded PDF file.^
 
 3. Click **Cancel Conversion** to confirm.
 
-    If you chose to keep the file, the PDF remains attached to the document as a static file. You can view the PDF but it will not be converted into an editable template.
+If you chose to keep the file, the PDF remains attached to the document as a static file. You can view the PDF but it will not be converted into an editable template.
 
 ##### Upload PDF as static document
 
@@ -97,19 +97,19 @@ To upload a PDF without converting it to an editable template:
 
 1. In the left sidebar, click **{{< fa cubes >}} Inventory**.
 
-2. Select a model or find your model by applying a filter or searching for it.
+2. Select a model or find your model by applying a filter or searching for it.^
 
-3. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select the **Latest** tab.
+3. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select the **Latest** tab.^
 
-4. Click on the document you want to add content to.
+4. Click on the document you want to upload a PDF to,^ or create a new document.^
 
-5. Under [start your document]{.smallcaps}, select **Upload a file**.
+5. Under [create document]{.smallcaps}, select **From PDF Upload**.
 
-6. Drag and drop a `.pdf` file into the upload area, or click **choose a file** to browse for it.
+6. Drag and drop a `.pdf` file into the upload area, or click **choose a file** to select from your file explorer.^
 
-7. Click **Upload Only** to attach the PDF to the document.
+7. Click **Upload as Static Document**.
 
-    The PDF is stored as a static file. You can view it within {{< var validmind.platform >}} but you cannot edit its contents.
+The uploaded PDF is stored as a static file. You can view it within {{< var validmind.platform >}} but you cannot modify its structure or contents.
 
 :::::
 
