--- a/site/guide/templates/manage-model-documents.qmd
+++ b/site/guide/templates/manage-model-documents.qmd
@@ -8,7 +8,7 @@ date: last-modified
 
 Add or delete documents available on individual models in your inventory.
 
-::: {.callout title="A standard model documentation, validation report, and ongoing monitoring report documents are provided by default."} 
+::: {.callout title="A standard model documentation, validation report, and ongoing monitoring report documents are provided by default."}
 These stock documents cannot be deleted, only edited.
 :::
 
@@ -19,7 +19,7 @@ These stock documents cannot be deleted, only edited.
 - [x] {{< var link.login >}}
 - [x] The model is registered in the model inventory.[^1]
 - [x] Document types[^2] and document templates[^3] have been set up for use.
-- [x] You are assigned a role with sufficient permissions to create or modify documents on models.[^4] 
+- [x] You are assigned a role with sufficient permissions to create or modify documents on models.[^4]
 
 :::
 
@@ -37,41 +37,32 @@ These stock documents cannot be deleted, only edited.
 
     - **[document title]{.smallcaps}** — Title of your document.[^7]
     - **[document type]{.smallcaps}**[^8] — The type of your document.
-    - **[document source]{.smallcaps}** — Upload a PDF file[^9] or select from an existing document template.[^10]
 
-6. Click **Create Document** to add the document to your model.
+6. Click **Create Document** to select from an existing document template,[^9] or upload an existing PDF.[^10]
 
 #### Upload PDF documents
 
-Convert a Portable Document Format `.pdf` file (PDF) into a new editable document in the {{< var validmind.platform >}}, allowing you to seamlessly work with existing PDFs as you would with any other template-based document, such as adding content blocks and attaching test results.
+Convert a Portable Document Format `.pdf` file (PDF) into an editable document in the {{< var validmind.platform >}}, allowing you to seamlessly work with existing PDFs as you would with any other template-based document, such as adding content blocks and attaching test results.
 
-{{< var vm.product >}} automatically extracts the structure and content from your PDF, generates a document template that maps to the extracted sections, and populates each section in the template with the contents from your original document.
-
-::: {.callout title="PDF conversion runs in the background."}
-Depending on the size and complexity of your PDF, conversion can take anywhere from a few seconds to several minutes. You can continue working in the {{< var validmind.platform >}} while the conversion runs.
-:::
+{{< var vm.product >}} automatically extracts the structure and content from your PDF, generates a document template that maps to the extracted sections, and populates each section in the template with the contents from your original document.[^11]
 
 ::::::: {.panel-tabset}
 
-##### Convert PDF to editable template
+##### Convert PDF to editable document
 
 To upload a PDF and convert it into an editable model document:
 
 1. In the left sidebar, click **{{< fa cubes >}} Inventory**.
 
-2. Select a model or find your model by applying a filter or searching for it.^
+2. Select a model or find your model by applying a filter or searching for it.[^12]
 
-3. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select the **Latest** tab.^
+3. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select the **Latest** tab.[^13]
 
-4. Click on the document you want to upload a PDF to,^ or create a new document.^
+4. Click on an empty document you want to upload a PDF to,[^14] or create a new document.[^15]
 
 5. Under [create document]{.smallcaps}, select **From PDF Upload**.
 
-6. Drag and drop a `.pdf` file into the upload area, or click **choose a file** to select from your file explorer.^
-
-::: {.callout title="Only a single PDF file can be uploaded at a time."}
-If you need to upload a different PDF, click **Remove** to clear the current file before selecting a new one.
-:::
+6. Drag and drop a `.pdf` file into the upload area, or click **choose a file** to select from your file explorer.[^16]
 
 7. Click **Upload & Convert to Editable Document**.
 
@@ -101,7 +92,7 @@ To upload a PDF without converting it to an editable template:
 
 3. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select the **Latest** tab.^
 
-4. Click on the document you want to upload a PDF to,^ or create a new document.^
+4. Click on an empty document you want to upload a PDF to,^ or create a new document.^
 
 5. Under [create document]{.smallcaps}, select **From PDF Upload**.
 
@@ -175,7 +166,7 @@ If a conversion appears to be stuck, use the **Cancel** option on the progress b
 ## Edit model documents
 
 ::: {.callout title="Static PDF documents cannot be edited."}
-PDFs that were uploaded without conversion are considered static documents. To edit a PDF-sourced document, upload it with the **Upload & Convert** option to generate an editable template. Documents generated by the {{< var validmind.developer >}} or created in the {{< var validmind.platform >}} can also be edited.
+PDFs that were uploaded without conversion are considered static documents.^
 :::
 
 1. In the left sidebar, click **{{< fa cubes >}} Inventory**.
@@ -237,11 +228,33 @@ Learn more about how to work with the default document types within the {{< var 
 
 [^8]: [Manage document types](manage-document-types.qmd)
 
-[^9]: [Upload PDF documents](#upload-pdf-documents)
+[^9]: [Working with document templates](/guide/templates/working-with-document-templates.qmd)
 
-[^10]: [Customize document templates](customize-document-templates.qmd)
+[^10]: [Upload PDF documents](#upload-pdf-documents)
 
-[^11]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
+[^11]:
+
+    **PDF conversion runs in the background.**
+
+    - Depending on the size and complexity of your PDF, conversion can take anywhere from a few seconds to several minutes.
+
+    - You can continue working in the {{< var validmind.platform >}} while the conversion runs.
+
+[^12]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
+
+[^13]: [Work with document versions](/guide/model-documentation/work-with-document-versions.qmd)
+
+[^14]:
+
+    ::: {.callout title="You can only upload PDFs to new, empty documents."}
+    Documents with a template already applied can not be replaced with a PDF.
+    :::
+
+[^15]: [Add model documents](#add-model-documents)
+
+[^16]: Only one PDF can be uploaded per document. To change your selection, click **Remove** to clear the currently queued file before choosing a new one.
+
+<!-- [^11]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
 
 [^12]: [Work with document versions](/guide/model-documentation/work-with-document-versions.qmd)
 
@@ -249,7 +262,7 @@ Learn more about how to work with the default document types within the {{< var 
 
 [^14]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
 
-[^15]: [Work with document versions](/guide/model-documentation/work-with-document-versions.qmd)
+[^15]: [Work with document versions](/guide/model-documentation/work-with-document-versions.qmd) -->
 
 
 
