--- a/site/guide/templates/manage-model-documents.qmd
+++ b/site/guide/templates/manage-model-documents.qmd
@@ -50,7 +50,7 @@ Convert a Portable Document Format `.pdf` file (PDF) into an editable document i
 
 ##### Convert PDF to editable document
 
-To upload a PDF and convert it into an editable model document:
+To upload a PDF and convert it into an editable document:
 
 1. In the left sidebar, click **{{< fa cubes >}} Inventory**.
 
@@ -72,31 +72,29 @@ When conversion completes, the page automatically refreshes to display your docu
 
 ##### Cancel PDF conversion
 
-If you need to stop an in-progress conversion:
+If you need to stop an in-progress PDF conversion:
 
 1. In the conversion progress banner that appears at the top of the document page, click **Cancel**.
 
-2. On the Cancel File Conversion modal, optionally toggle **Delete file from this document** on to also remove the uploaded PDF file.^
+2. On the Cancel File Conversion modal, optionally toggle **Delete file from this document** on to also remove the uploaded PDF file.[^17]
 
 3. Click **Cancel Conversion** to confirm.
 
-If you chose to keep the file, the PDF remains attached to the document as a static file. You can view the PDF but it will not be converted into an editable template.
-
 ##### Upload PDF as static document
 
-To upload a PDF without converting it to an editable template:
+To upload a PDF without converting it to an editable document:
 
 1. In the left sidebar, click **{{< fa cubes >}} Inventory**.
 
-2. Select a model or find your model by applying a filter or searching for it.^
+2. Select a model or find your model by applying a filter or searching for it.[^18]
 
-3. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select the **Latest** tab.^
+3. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select the **Latest** tab.[^19]
 
-4. Click on an empty document you want to upload a PDF to,^ or create a new document.^
+4. Click on an empty document you want to upload a PDF to,[^20] or create a new document.[^21]
 
 5. Under [create document]{.smallcaps}, select **From PDF Upload**.
 
-6. Drag and drop a `.pdf` file into the upload area, or click **choose a file** to select from your file explorer.^
+6. Drag and drop a `.pdf` file into the upload area, or click **choose a file** to select from your file explorer.[^22]
 
 7. Click **Upload as Static Document**.
 
@@ -253,6 +251,29 @@ Learn more about how to work with the default document types within the {{< var 
 [^15]: [Add model documents](#add-model-documents)
 
 [^16]: Only one PDF can be uploaded per document. To change your selection, click **Remove** to clear the currently queued file before choosing a new one.
+
+[^17]:
+
+    ::: {.callout title="If you chose to keep the file, the PDF remains attached to the document as a static file."}
+    You can view the PDF but it will not be converted into an editable document.
+
+    :::
+
+[^18]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
+
+[^19]: [Work with document versions](/guide/model-documentation/work-with-document-versions.qmd)
+
+[^20]:
+
+    ::: {.callout title="You can only upload PDFs to new, empty documents."}
+    Documents with a template already applied can not be replaced with a PDF.
+    :::
+
+[^21]: [Add model documents](#add-model-documents)
+
+[^22]: Only one PDF can be uploaded per document. To change your selection, click **Remove** to clear the currently queued file before choosing a new one.
+
+
 
 <!-- [^11]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
 
