--- a/site/guide/templates/manage-model-documents.qmd
+++ b/site/guide/templates/manage-model-documents.qmd
@@ -107,24 +107,19 @@ The uploaded PDF is stored as a static file. You can view it within {{< var vali
 ::: {.callout-button .pl4 .nt4}
 ::: {.callout collapse="true" appearance="minimal"}
 
-### How do I get the best results when converting PDFs into editable documents in the {{< var validmind.platform >}}?
-
-For the best conversion results, keep the following in mind when preparing your PDF:
+### How do I get the best results when converting PDFs into editable documents?
 
 - **Use text-based PDFs** — PDFs that contain selectable text convert most reliably. Scanned image-only PDFs may produce poor or empty results.
-- **Use clear heading hierarchy** — Documents with well-defined headings (H1, H2, H3) produce more accurate section mappings in the generated template.
+- **Use clear heading hierarchy** — Documents with well-defined headings (H1, H2, H3) produce more accurate section mappings in the generated document template.
 - **Keep formatting simple** — Standard paragraphs, lists, and tables convert well. Complex layouts such as multi-column text, sidebars, or heavily nested tables may not be preserved accurately.
-- **Check file size** — Large PDFs with many pages take longer to process. Consider splitting very large documents into smaller sections before uploading if conversion times are a concern.
-- **Review after conversion** — Always review the generated template after conversion completes to verify that sections and content were extracted correctly.
 
-<!-- ## Examples of successful imports
+::: {.embed-tip}
+### How can I trust that the conversion is accurate?
 
-The following types of PDF documents typically produce good conversion results:
+Always review the generated template after conversion completes to verify that sections and content were extracted correctly, and make any necessary adjustments.
+:::
 
-- Model documentation reports with clearly labeled sections such as executive summary, methodology, data description, and results.
-- Validation reports that follow a standard heading structure.
-- Risk assessments and policy documents organized with numbered sections.
-- Regulatory submissions with a table of contents and consistent formatting. -->
+<br>
 
 ## Troubleshooting
 
@@ -153,7 +148,7 @@ Conversion status shows [failed]{.bubble .bubble-red}
 ::: {.embed-tip}
 ### My PDF conversion is stuck. What can I do?
 
-If a conversion appears to be stuck, use the **Cancel** option on the progress banner to stop processing and try again with a revised PDF.
+If a conversion appears to be stuck, click **Cancel** in the conversion progress banner to stop processing and try again with a revised PDF.
 :::
 
 <br>
@@ -164,7 +159,8 @@ If a conversion appears to be stuck, use the **Cancel** option on the progress b
 ## Edit model documents
 
 ::: {.callout title="Static PDF documents cannot be edited."}
-PDFs that were uploaded without conversion are considered static documents.^
+You can view static PDF documents within {{< var validmind.platform >}} but you cannot modify their structure or contents.[^23]
+
 :::
 
 1. In the left sidebar, click **{{< fa cubes >}} Inventory**.
@@ -273,7 +269,7 @@ Learn more about how to work with the default document types within the {{< var 
 
 [^22]: Only one PDF can be uploaded per document. To change your selection, click **Remove** to clear the currently queued file before choosing a new one.
 
-
+[^23]: [Upload PDF documents](#upload-pdf-documents)
 
 <!-- [^11]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
 
