Edit: Working with model documentation

--- a/site/guide/templates/manage-model-documents.qmd
+++ b/site/guide/templates/manage-model-documents.qmd
@@ -141,7 +141,7 @@ Conversion takes too long
 : - The PDF may be very large or contain complex elements.
 - Try uploading a simplified version of the PDF. Remove large embedded images or unnecessary appendices.
 
-Conversion status shows [failed]{.bubble .bubble-red}
+Upload completes but conversion fails
 : - An unexpected error occurred during processing.
 - Re-upload the PDF file and try the conversion again. If the issue persists, contact your {{< var validmind.platform >}} administrator.
 
