--- a/site/guide/model-documentation/content_blocks/_generate-with-ai.qmd
+++ b/site/guide/model-documentation/content_blocks/_generate-with-ai.qmd
@@ -3,7 +3,7 @@ Refer to the LICENSE file in the root of this repository for details.
 SPDX-License-Identifier: AGPL-3.0 AND ValidMind Commercial -->
 
 :::: {.content-visible unless-format="revealjs"}
-1. Click **[{{< fa diamond >}} <sup>[beta]{.smallcaps}</sup>]{.pink} (Generate Text with AI)** in the toolbar while editing a content block.
+1. Click **[{{< fa diamond >}} (Generate Text with AI)** in the toolbar while editing a content block.
 
 1. Enter an optional prompt to guide the output, then click **Generate Content** to compose a draft for review.
 
@@ -31,7 +31,7 @@ SPDX-License-Identifier: AGPL-3.0 AND ValidMind Commercial -->
 
 <!-- INLINE LINKS FOR REVEALJS TRAINING -->
 :::: {.content-hidden unless-format="revealjs"}
-1. Click **[{{< fa diamond >}} <sup>[beta]{.smallcaps}</sup>]{.pink} (Generate Text with AI)** in the toolbar while editing a content block.
+1. Click **[{{< fa diamond >}} (Generate Text with AI)** in the toolbar while editing a content block.
 
 1. Enter an optional prompt to guide the output, then click **Generate Content** to compose a draft for review.
 
