--- a/site/guide/model-documentation/work-with-content-blocks.qmd
+++ b/site/guide/model-documentation/work-with-content-blocks.qmd
@@ -110,15 +110,28 @@ While editing a simple text block, you can insert math equations using the formu
 
 3. Click **[{{< fa check >}}]{.green}** to add the equation to your content block.
 
-### Generate Text with AI <sup>[beta]{.smallcaps .pink}</sup>
+### Generate content drafts with AI
+
+While editing a simple text block, you can have {{< var vm.product >}} assist you with generating content drafts.
 
 ::: {.callout title="Have you logged your tests?"}
-Generating content drafts for your model documentation works best after you've logged tests and test descriptions for your model's tests with the {{< var validmind.developer >}},[^10] as existing test descriptions provide more context for the large language model (LLM) to draw upon.
-
+Generating content drafts works best after you've logged tests with the {{< var validmind.developer >}},[^10] as test descriptions provide additional context for the AI.
 :::
 
-While editing a simple text block, you can have {{< var vm.product >}} assist you with generating content drafts:
+#### What context is available in content blocks?
 
+When you generate content, the content builder uses the following context:
+
+- **Template guidelines** — Instructions from the document template for the current section
+- **Model metadata:**
+   - Model name
+   - Model purpose
+   - Model use
+   - Model ID
+   - Model inventory fields
+- **Model document content** — Text blocks and test result descriptions from your document (figures and tables are not included)
+
+To generate content drafts:
 <!-- PDF CONTEXT DOCUMENTS ARE BEHIND A FEATURE FLAG -->
 
 {{< include content_blocks/_generate-with-ai.qmd >}}
