--- a/site/guide/model-documentation/work-with-content-blocks.qmd
+++ b/site/guide/model-documentation/work-with-content-blocks.qmd
@@ -122,14 +122,14 @@ Generating content drafts works best after you've logged tests with the {{< var 
 
 When you generate content, the content builder uses the following context:
 
-- **Template guidelines** — Instructions from the document template for the current section
-- **Model metadata:**
+- Template guidelines — Instructions from the document template for the current section
+- Model metadata:
    - Model name
    - Model purpose
    - Model use
    - Model ID
    - Model inventory fields
-- **Model document content** — Text blocks and test result descriptions from your document (figures and tables are not included)
+- Model document content — Text blocks and test result descriptions from your document (figures and tables are not included)
 
 To generate content drafts:
 <!-- PDF CONTEXT DOCUMENTS ARE BEHIND A FEATURE FLAG -->
