--- a/site/guide/templates/manage-model-documents.qmd
+++ b/site/guide/templates/manage-model-documents.qmd
@@ -141,9 +141,9 @@ Conversion takes too long
 : - The PDF may be very large or contain complex elements.
 - Try uploading a simplified version of the PDF. Remove large embedded images or unnecessary appendices.
 
-Upload completes but conversion fails
+PDF upload completes but conversion fails
 : - An unexpected error occurred during processing.
-- Re-upload the PDF file and try the conversion again. If the issue persists, contact your {{< var validmind.platform >}} administrator.
+- Delete the document and recreate it, then re-upload the PDF file and try the conversion again.
 
 ::: {.embed-tip}
 ### My PDF conversion is stuck. What can I do?
