--- a/site/guide/templates/manage-model-documents.qmd
+++ b/site/guide/templates/manage-model-documents.qmd
@@ -38,7 +38,15 @@ These stock documents cannot be deleted, only edited.
     - **[document title]{.smallcaps}** — Title of your document.[^7]
     - **[document type]{.smallcaps}**[^8] — The type of your document.
 
-6. Click **Create Document** to select from an existing document template,[^9] or upload an existing PDF.[^10]
+6. Click **Create Document** to select from an existing document template,[^9] or upload an existing PDF:[^10]
+
+#### Create document from existing template
+
+a. Under [create document]{.smallcaps}, select **From {{< var vm.product >}} Template**.
+
+b. Select your desired **[template]{.smallcaps}** from the drop-down menu.
+
+c. Click **Use Template** to apply the template.
 
 #### Upload PDF documents
 
