--- a/site/guide/model-documentation/assign-documentation-section-statuses.qmd
+++ b/site/guide/model-documentation/assign-documentation-section-statuses.qmd
@@ -45,7 +45,7 @@ The documentation completion status summary will then be updated on your Documen
 
 <!-- FOOTNOTES -->
 
-[^1]: [Manage model documents](/guide/templates/manage-model-documents.qmd#upload-pdf-documents)
+[^1]: [Manage model documents](/guide/templates/manage-model-documents.qmd#add-model-documents)
 
 [^2]: [Register models in the inventory](/guide/model-inventory/register-models-in-inventory.qmd)
 
