--- a/site/guide/model-documentation/collaborate-with-others.qmd
+++ b/site/guide/model-documentation/collaborate-with-others.qmd
@@ -147,7 +147,7 @@ To delete a comment in a resolved thread, follow the same steps but click the **
 
 <!-- FOOTNOTES -->
 
-[^1]: [Manage model documents](/guide/templates/manage-model-documents.qmd#upload-pdf-documents)
+[^1]: [Manage model documents](/guide/templates/manage-model-documents.qmd#add-model-documents)
 
 [^2]: [Register models in the inventory](/guide/model-inventory/register-models-in-inventory.qmd)
 
