--- a/site/guide/model-documentation/work-with-content-blocks.qmd
+++ b/site/guide/model-documentation/work-with-content-blocks.qmd
@@ -150,7 +150,7 @@ Test-driven or metric over time blocks can be re-added later on but **text block
 
 <!-- FOOTNOTES -->
 
-[^1]: [Manage model documents](/guide/templates/manage-model-documents.qmd#upload-pdf-documents)
+[^1]: [Manage model documents](/guide/templates/manage-model-documents.qmd#add-model-documents)
 
 [^2]: [Add mathematical formulas](#add-mathematical-formulas)
 
