--- a/site/guide/model-documentation/working-with-model-documentation.qmd
+++ b/site/guide/model-documentation/working-with-model-documentation.qmd
@@ -132,6 +132,6 @@ Wrap up your model documentation, collaborate with other stakeholders, and submi
 
 [^3]: [Manage permissions](/guide/configuration/manage-permissions.qmd)
 
-[^4]: [Manage model documents](/guide/templates/manage-model-documents.qmd#upload-pdf-documents)
+[^4]: [Manage model documents](/guide/templates/manage-model-documents.qmd#add-model-documents)
 
 [^5]: [Work with document versions](/guide/model-documentation/work-with-document-versions.qmd)
