--- a/site/guide/templates/manage-model-documents.qmd
+++ b/site/guide/templates/manage-model-documents.qmd
@@ -38,9 +38,11 @@ These stock documents cannot be deleted, only edited.
     - **[document title]{.smallcaps}** — Title of your document.[^7]
     - **[document type]{.smallcaps}**[^8] — The type of your document.
 
-6. Click **Create Document** to select from an existing document template,[^9] or upload an existing PDF:[^10]
+6. Click **Create Document** to select from a document template within the {{< var validmind.platform >}},[^9] or upload an existing PDF:[^10]
 
-#### Create document from existing template
+::: {.panel-tabset}
+
+#### Create document from {{< var vm.product >}} template
 
 a. Under [create document]{.smallcaps}, select **From {{< var vm.product >}} Template**.
 
@@ -48,69 +50,28 @@ b. Select your desired **[template]{.smallcaps}** from the drop-down menu.
 
 c. Click **Use Template** to apply the template.
 
-#### Upload PDF documents
+#### Upload existing PDF file
 
 Convert a Portable Document Format `.pdf` file (PDF) into an editable document in the {{< var validmind.platform >}}, allowing you to seamlessly work with existing PDFs as you would with any other template-based document, such as adding content blocks and attaching test results.
 
 {{< var vm.product >}} automatically extracts the structure and content from your PDF, generates a document template that maps to the extracted sections, and populates each section in the template with the contents from your original document.[^11]
 
-::::::: {.panel-tabset}
+To upload a PDF:
 
-##### Convert PDF to editable document
+a. Under [create document]{.smallcaps}, select **From PDF Upload**.
 
-To upload a PDF and convert it into an editable document:
+b. Drag and drop a `.pdf` file into the upload area, or click **choose a file** to select from your file explorer.[^12]
 
-1. In the left sidebar, click **{{< fa cubes >}} Inventory**.
+c. Choose to:
 
-2. Select a model or find your model by applying a filter or searching for it.[^12]
+    - **Upload as Static Document** — The uploaded PDF is stored as a static file. You can view it within {{< var validmind.platform >}} but you cannot modify its structure or contents.
+    - **Upload & Convert to Editable Document** — Track conversion progress in the banner that appears at the top of the document page. When conversion completes, the page automatically refreshes to display your document as an editable template with the content extracted from the PDF.
 
-3. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select the **Latest** tab.[^13]
+        If you need to stop an in-progress PDF conversion:
 
-4. Click on an empty document you want to upload a PDF to,[^14] or create a new document.[^15]
-
-5. Under [create document]{.smallcaps}, select **From PDF Upload**.
-
-6. Drag and drop a `.pdf` file into the upload area, or click **choose a file** to select from your file explorer.[^16]
-
-7. Click **Upload & Convert to Editable Document**.
-
-    Track conversion progress in the banner that appears at the top of the document page.
-
-When conversion completes, the page automatically refreshes to display your document as an editable template with the content extracted from the PDF.
-
-##### Cancel PDF conversion
-
-If you need to stop an in-progress PDF conversion:
-
-1. In the conversion progress banner that appears at the top of the document page, click **Cancel**.
-
-2. On the Cancel File Conversion modal, optionally toggle **Delete file from this document** on to also remove the uploaded PDF file.[^17]
-
-3. Click **Cancel Conversion** to confirm.
-
-##### Upload PDF as static document
-
-To upload a PDF without converting it to an editable document:
-
-1. In the left sidebar, click **{{< fa cubes >}} Inventory**.
-
-2. Select a model or find your model by applying a filter or searching for it.[^18]
-
-3. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select the **Latest** tab.[^19]
-
-4. Click on an empty document you want to upload a PDF to,[^20] or create a new document.[^21]
-
-5. Under [create document]{.smallcaps}, select **From PDF Upload**.
-
-6. Drag and drop a `.pdf` file into the upload area, or click **choose a file** to select from your file explorer.[^22]
-
-7. Click **Upload as Static Document**.
-
-The uploaded PDF is stored as a static file. You can view it within {{< var validmind.platform >}} but you cannot modify its structure or contents.
-
-:::::
-
-<br>
+        i. In the conversion progress banner that appears at the top of the document page, click **Cancel**.
+        ii. On the Cancel File Conversion modal, optionally toggle **Delete file from this document** on to also remove the uploaded PDF file.[^13]
+        iii. Click **Cancel Conversion** to confirm.
 
 ::: {.callout-button .pl4 .nt4}
 ::: {.callout collapse="true" appearance="minimal"}
@@ -130,8 +91,6 @@ Always review the generated template after conversion completes to verify that s
 <br>
 
 ## Troubleshooting
-
-If a PDF conversion fails or produces unexpected results, try the following:
 
 Conversion fails immediately
 : - The file may be corrupted or password-protected.
@@ -162,6 +121,8 @@ If a conversion appears to be stuck, click **Cancel** in the conversion progress
 <br>
 
 :::
+:::
+
 :::
 
 ## Edit model documents
@@ -232,7 +193,11 @@ Learn more about how to work with the default document types within the {{< var 
 
 [^9]: [Working with document templates](/guide/templates/working-with-document-templates.qmd)
 
-[^10]: [Upload PDF documents](#upload-pdf-documents)
+[^10]:
+
+    ::: {.callout title="You can only upload PDFs to new, empty documents."}
+    Documents with a template already applied can not be replaced with a PDF.
+    :::
 
 [^11]:
 
@@ -242,26 +207,25 @@ Learn more about how to work with the default document types within the {{< var 
 
     - You can continue working in the {{< var validmind.platform >}} while the conversion runs.
 
-[^12]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
+[^12]: Only one PDF can be uploaded per document. To change your selection, click **Remove** to clear the currently queued file before choosing a new one.
 
-[^13]: [Work with document versions](/guide/model-documentation/work-with-document-versions.qmd)
-
-[^14]:
-
-    ::: {.callout title="You can only upload PDFs to new, empty documents."}
-    Documents with a template already applied can not be replaced with a PDF.
-    :::
-
-[^15]: [Add model documents](#add-model-documents)
-
-[^16]: Only one PDF can be uploaded per document. To change your selection, click **Remove** to clear the currently queued file before choosing a new one.
-
-[^17]:
+[^13]:
 
     ::: {.callout title="If you chose to keep the file, the PDF remains attached to the document as a static file."}
     You can view the PDF but it will not be converted into an editable document.
 
     :::
+
+<!--
+
+
+
+
+[^15]: [Add model documents](#add-model-documents)
+
+
+
+
 
 [^18]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
 
@@ -277,7 +241,7 @@ Learn more about how to work with the default document types within the {{< var 
 
 [^22]: Only one PDF can be uploaded per document. To change your selection, click **Remove** to clear the currently queued file before choosing a new one.
 
-[^23]: [Upload PDF documents](#upload-pdf-documents)
+[^23]: [Upload PDF documents](#add-model-documents)
 
 [^24]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
 
@@ -287,7 +251,7 @@ Learn more about how to work with the default document types within the {{< var 
 
 [^27]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
 
-[^28]: [Work with document versions](/guide/model-documentation/work-with-document-versions.qmd)
+[^28]: [Work with document versions](/guide/model-documentation/work-with-document-versions.qmd) -->
 
 
 
