--- a/site/guide/model-documentation/view-documentation-guidelines.qmd
+++ b/site/guide/model-documentation/view-documentation-guidelines.qmd
@@ -46,7 +46,7 @@ By default, the [{{< fa hand >}} Customer Admin]{.bubble} role has these permiss
 
 <!-- FOOTNOTES -->
 
-[^1]: [Manage model documents](/guide/templates/manage-model-documents.qmd#upload-pdf-documents)
+[^1]: [Manage model documents](/guide/templates/manage-model-documents.qmd#add-model-documents)
 
 [^2]: [Register models in the inventory](/guide/model-inventory/register-models-in-inventory.qmd)
 
