--- a/site/guide/model-documentation/work-with-test-results.qmd
+++ b/site/guide/model-documentation/work-with-test-results.qmd
@@ -87,7 +87,7 @@ Filters can be removed from the list of test result metadata by clicking on the 
 
 <!-- FOOTNOTES -->
 
-[^1]: [Manage model documents](/guide/templates/manage-model-documents.qmd#upload-pdf-documents)
+[^1]: [Manage model documents](/guide/templates/manage-model-documents.qmd#add-model-documents)
 
 [^2]: [Register models in the inventory](/guide/model-inventory/register-models-in-inventory.qmd)
 
