--- a/site/guide/model-validation/assess-compliance.qmd
+++ b/site/guide/model-validation/assess-compliance.qmd
@@ -74,7 +74,7 @@ To link evidence logged by developers^[[{{< var validmind.developer >}}](/develo
 
 <!-- FOOTNOTES -->
 
-[^1]: [Manage model documents](/guide/templates/manage-model-documents.qmd#upload-pdf-documents)
+[^1]: [Manage model documents](/guide/templates/manage-model-documents.qmd#add-model-documents)
 
 [^2]: [Register models in the inventory](/guide/model-inventory/register-models-in-inventory.qmd)
 
