--- a/site/guide/model-validation/preparing-validation-reports.qmd
+++ b/site/guide/model-validation/preparing-validation-reports.qmd
@@ -143,7 +143,7 @@ Collaborate with other stakeholders and submit your work for approval:
 
 [^4]: [Manage permissions](/guide/configuration/manage-permissions.qmd)
 
-[^5]: [Manage model documents](/guide/templates/manage-model-documents.qmd#upload-pdf-documents)
+[^5]: [Manage model documents](/guide/templates/manage-model-documents.qmd#add-model-documents)
 
 [^6]: [Assess compliance](/guide/model-validation/assess-compliance.qmd)
 
@@ -153,7 +153,7 @@ Collaborate with other stakeholders and submit your work for approval:
 
 [^9]: [Working with model documents](/guide/templates/working-with-model-documents.qmd)
 
-[^10]: [Manage model documents](/guide/templates/manage-model-documents.qmd#upload-pdf-documents)
+[^10]: [Manage model documents](/guide/templates/manage-model-documents.qmd#add-model-documents)
 
 [^11]: [Work with document versions](/guide/model-documentation/work-with-document-versions.qmd)
 
