Quickstart template selection edit

--- a/site/get-started/common-steps/_select-template.qmd
+++ b/site/get-started/common-steps/_select-template.qmd
@@ -6,7 +6,7 @@ SPDX-License-Identifier: AGPL-3.0 AND ValidMind Commercial -->
 
 a. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select **Documentation**.
 
-b. Under **[template]{.smallcaps}**, select `Binary classification`.
+b. Under [create document]{.smallcaps}, select `Binary classification` from the **[template]{.smallcaps}** drop-down menu.
 
 c. Click **Use Template** to apply the template.
 
@@ -20,7 +20,7 @@ c. Click **Use Template** to apply the template.
 :::: {.content-visible unless-format="revealjs" unless-meta="includes.developer"}
 a. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select **Validation Report**.
 
-a. Under **[template]{.smallcaps}**, select `Generic Validation Report`.
+b. Under [create document]{.smallcaps}, select `Generic Validation Report` from the **[template]{.smallcaps}** drop-down menu.
 
 c. Click **Use Template** to apply the template.
 
